# ubiquitous-spoon

./: .gitignore  CMakeLists.txt  README.md
qml/: Main.qml
qml/components/: FlatButton.qml  SkillDetailView.qml  SkillEditorView.qml  SkillNodeItem.qml  SkillTreeCanvas.qml
resources/: resources.qrc
src/: main.cpp
src/app/: ApplicationController.cpp  ApplicationController.h
src/application/: DiceEngine.cpp  DiceEngine.h  SkillTreeModel.cpp  SkillTreeModel.h  SkillTreeViewModel.cpp  SkillTreeViewModel.h  ThemeManager.cpp  ThemeManager.h
src/domain/: SkillNode.cpp  SkillNode.h  SkillTree.cpp  SkillTree.h
src/infrastructure/: JsonRepository.cpp  JsonRepository.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/panels/: RollLogPanel.cpp  RollLogPanel.h  SkillDetailPanel.cpp  SkillDetailPanel.h  SkillEditorPanel.cpp  SkillEditorPanel.h
src/ui/widgets/: SkillTreeView.cpp  SkillTreeView.h
